Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
 "POT-Creation-Date: 2010-05-02 09:38+0000\n"
-"PO-Revision-Date: 2010-05-02 12:01+0200\n"
+"PO-Revision-Date: 2010-05-02 13:35+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -958,7 +958,7 @@ msgstr "Columna de descripción"
 
 #: ../libyelp/yelp-location-entry.c:247
 msgid "A column in the model to descriptions from"
-msgstr ""
+msgstr "Una columna en el modelo de la que obtener las descripciones"
 
 #: ../libyelp/yelp-location-entry.c:262
 msgid "Icon Column"
@@ -966,7 +966,7 @@ msgstr "Columna de icono"
 
 #: ../libyelp/yelp-location-entry.c:263
 msgid "A column in the model to get icon names from"
-msgstr ""
+msgstr "Una columna en el modelo de la que obtener los nombres de icono"
 
 #: ../libyelp/yelp-location-entry.c:278
 msgid "Flags Column"
@@ -997,7 +997,7 @@ msgstr "GtkSettings"
 
 #: ../libyelp/yelp-settings.c:147
 msgid "A GtkSettings object to get settings from"
-msgstr ""
+msgstr "Un objeto GtkSettings del que obtener la configuración"
 
 #: ../libyelp/yelp-settings.c:155
 msgid "GtkIconTheme"
@@ -1005,7 +1005,7 @@ msgstr "GtkIconTheme"
 
 #: ../libyelp/yelp-settings.c:156
 msgid "A GtkIconTheme object to get icons from"
-msgstr ""
+msgstr "Un objeto GtkIconTheme del que obtener los iconos"
 
 #: ../libyelp/yelp-settings.c:164
 msgid "Font Adjustment"
