--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+Changes in 2.31.2:
+------------------
+* Location entry completions are sorted by icon and title.
+* All pages have an icon, help-contents by default.
+* Location entries now pulse when page is loading.
+* Added bookmarks with page icons, stored per-document.
+* Added previous and next menu items for linear documents.
+* Refreshed error pages, look like Yelp note boxes.
+* Window geometry is stored per-document.
+* Added info documents, with slightly nicer formatting.
+* Updated translations:
+  de    (Mario Blättermann)
+  es    (Jorge González)
+  gl    (Fran Diéguez)
+  nb    (Kjartan Maraas)
+  ug    (Gheyret Kenji)
+
 Changes in 2.31.1:
 ------------------
 * Completely revamped document-focused interface
