--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 2.31.4:
+------------------
+* Build fixes for gsettings and bumped yelp-xsl requirement
+
 Changes in 2.31.3:
 ------------------
 * Added DocBook 5 support (Brian M. Carlson)
