Updated zh_CN translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-31  Funda Wang  <fundawang@gmail.com>
+
+	* zh_CN.po: Updated zh_CN translation.
+
 2009-04-5  Nikos Charonitakis <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation by alefteris.
