--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Changes in 2.31.5:
+------------------
+* New "Read Later" feature
+* Support for proposed XDG help: URI scheme
+* Use entire search path when loading Mallard docs
+* Updated for new yelp-xsl common HTML output
+* New bookmarks editor window
+* Man pages are back again
+* Recognize Mallard docs by index.page.stub in editor mode
+* Fix for incorrect bookmarks titles when switching docs
+* Updated translations:
+  de    (Mario Blättermann)
+  es    (Jorge González)
+  et    (Ivar Smolin)
+  gl    (Fran Diéguez)
+  he    (Yaron Shahrabani)
+  nb    (Kjartan Maraas)
+  sl    (Matej Urbančič)
+  zh_CN (Funda Wang)
+
 Changes in 2.31.4:
 ------------------
 * Build fixes for gsettings and bumped yelp-xsl requirement
