Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
 "POT-Creation-Date: 2010-06-09 19:05+0000\n"
-"PO-Revision-Date: 2010-06-15 19:30+0200\n"
+"PO-Revision-Date: 2010-06-16 06:12+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1130,7 +1130,7 @@ msgstr "Guardar imagen"
 #: ../libyelp/yelp-view.c:873
 #| msgid "Save Image"
 msgid "Save Code"
-msgstr "Guardar código"
+msgstr "Guardar código"
 
 #. Not using a mnemonic because underscores are common in email
 #. * addresses, and we'd have to escape them. There doesn't seem
@@ -1173,12 +1173,12 @@ msgstr "_Copiar texto"
 
 #: ../libyelp/yelp-view.c:1126
 msgid "C_opy Code Block"
-msgstr "C_opiar bloque de código"
+msgstr "C_opiar bloque de código"
 
 #: ../libyelp/yelp-view.c:1131
 #| msgid "_Save Video As..."
 msgid "Save Code _Block As..."
-msgstr "Guarcar _bloque de código como…"
+msgstr "Guarcar _bloque de código como…"
 
 #: ../libyelp/yelp-view.c:1302
 #, c-format
@@ -1206,13 +1206,13 @@ msgstr "Error desconocido"
 #, c-format
 #| msgid "The URI ‘%s’ does point to a valid page."
 msgid "The URI ‘%s’ does not point to a valid page."
-msgstr "El URI «%s» no apunta a una página válida."
+msgstr "El URI «%s» no apunta a una página válida."
 
 #: ../libyelp/yelp-view.c:1482
 #, c-format
 #| msgid "The URI ‘%s’ does point to a valid page."
 msgid "The URI does not point to a valid page."
-msgstr "El URI no apunta a una página válida."
+msgstr "El URI no apunta a una página válida."
 
 #: ../libyelp/yelp-view.c:1490
 #, c-format
