--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes in 2.31.7:
+------------------
+* Bumped to GTK+ 3.0
+* Fixed broken gsettings keyfile setup
+* Updated translations:
+  eo      (Kristjan Schmidt)
+  lt      (Aurimas Černius)
+
 Changes in 2.31.6:
 ------------------
 * Don't double-add pages, also fixes #621398
