--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Changes in 2.30.2:
+------------------
+* Fixed "Open Link in New Window", bug #615457 (Edward Sheldrake)
+* Fixed TOC title internationalization, bug #615141 (Takao Fujiwara)
+* Updated translations:
+  af    (Friedel Wolff)
+  ja    (Takayuki KUSANO)
+  kk    (Baurzhan Muftakhidinov)
+  or    (Manoj Kumar Giri)
+  sk    (Laco Gubík)
+  ug    (Gheyret Kenji)
+
 Changes in 2.30.1:
 ------------------
 * Support relocatable .gnome2 directory (Ray Strode)
