Updated Slovenian translation

--- a/po/sl.po
+++ b/po/sl.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=yelp&component=general\n"
-"POT-Creation-Date: 2010-10-01 14:36+0000\n"
-"PO-Revision-Date: 2010-10-06 15:05+0100\n"
+"POT-Creation-Date: 2010-10-09 12:26+0000\n"
+"PO-Revision-Date: 2010-10-09 20:13+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "Language: \n"
@@ -937,18 +937,16 @@ msgid "View"
 msgstr "Pogled"
 
 #: ../libyelp/yelp-location-entry.c:324
-#, fuzzy
 msgid "A YelpView instance to control"
-msgstr "Zagon upravljalnika glasnosti ni uspel: %s"
+msgstr "Primerek za nadzor YelpView"
 
 #: ../libyelp/yelp-location-entry.c:339
 msgid "Bookmarks"
 msgstr "Zaznamki"
 
 #: ../libyelp/yelp-location-entry.c:340
-#, fuzzy
 msgid "A YelpBookmarks implementation instance"
-msgstr "Opravilo z več pojavitvami"
+msgstr "Primerek izgrajenega predmeta YelpBookmarks"
 
 #: ../libyelp/yelp-location-entry.c:356
 msgid "Enable Search"
