Updated Romanian translation

--- a/po/ro.po
+++ b/po/ro.po
@@ -220,7 +220,7 @@ msgstr "Secțiunile 3form și 3menu"
 
 #: ../data/man.xml.in.h:48
 msgid "Sections 3ncurses and 3curses"
-msgstr "Secțiunile 3ncurses și 3 curses"
+msgstr "Secțiunile 3ncurses și 3curses"
 
 #: ../data/man.xml.in.h:49
 msgid "Sections 3pm and 3perl"
@@ -1147,7 +1147,7 @@ msgstr "_Deschide legătura"
 
 #: ../libyelp/yelp-view.c:1071
 msgid "Open Link in New _Window"
-msgstr "Deschide legătura într-o nouă fereastră"
+msgstr "Deschide legătura într-o nouă _fereastră"
 
 #: ../libyelp/yelp-view.c:1122
 msgid "_Save Image As..."
