Updated Japanese translation

--- a/po/ja.po
+++ b/po/ja.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: yelp gnome-2-30\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2010-08-11 21:47+0000\n"
-"PO-Revision-Date: 2009-09-19 23:00+0900\n"
+"POT-Creation-Date: 2010-10-29 20:57+0000\n"
+"PO-Revision-Date: 2010-11-01 23:52+0900\n"
 "Last-Translator: Takayuki KUSANO <AE5T-KSN@asahi-net.or.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -914,7 +914,7 @@ msgstr "等幅(_F):"
 
 #: ../data/ui/yelp-preferences.ui.h:6
 msgid "_Use system fonts"
-msgstr "システムのフォントを使う(_U)"
+msgstr "システムフォントを使う(_U)"
 
 #: ../data/ui/yelp-preferences.ui.h:7
 msgid "_Variable width:"
@@ -946,7 +946,7 @@ msgstr "キャレットを使用する"
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr "システム・フォントを使用する"
+msgstr "システムフォントを使用する"
 
 #: ../data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
